env var in other steps

--- a/.github/workflows/workflow-commands.yml
+++ b/.github/workflows/workflow-commands.yml
@@ -12,3 +12,9 @@ jobs:
           echo "Msg 1"
           echo "Msg 2"
           echo "::endgroup::"
+      - name: "step 1"
+        run: |
+          echo "MY_VAL=hello" >> $GITHUB_ENV
+      - name: "step 2"
+        run: |
+          echo $MY_VAL
